add function to update gameboard dispaly

--- a/src/play-game.html
+++ b/src/play-game.html
@@ -1,5 +1,6 @@
 <div id="player-name">player</div>
 <div id="computer-name">computer</div>
-<div id="player-gameboard">gameboard</div>
-<div id="computer-gameboard">gameboard</div>
+<div id="player-gameboard">
+</div>
+<div id="computer-gameboard"></div>
 <div id="turn-indicator">your turn</div>
