--- a/src/startup.html
+++ b/src/startup.html
@@ -1,9 +1,14 @@
 <div class="ship-options">
-    <div id="battleship">battleship</div>
-    <div id="cruiser">cruiser</div>
-    <div id="submarine">submarine</div>
-    <div id="carrier">carrier</div>
-    <div id="destroyer">destroyer</div>
+    <img src="./assets/battleship.png" alt="" id="battleship">
+    <img src="./assets/cruiser.png" alt="" id="cruiser">
+    <img src="./assets/submarine.png" alt="" id="submarine">
+    <img src="./assets/carrier.png" alt="" id="carrier">
+    <img src="./assets/destroyer.png" alt="" id="destroyer">
+    <!-- <div id="battleship"></div> -->
+    <!-- <div id="cruiser"></div>
+    <div id="submarine"></div>
+    <div id="carrier"></div>
+    <div id="destroyer"></div> -->
 </div>
 <div class="ship-placement">
     <input type="text" id="name-input" placeholder="Enter Player Name">
