add drag and drop to ship placement

--- a/src/startup.html
+++ b/src/startup.html
@@ -1,22 +1,19 @@
 <div class="ship-options">
-    <img src="./assets/battleship.png" alt="" id="battleship">
-    <img src="./assets/cruiser.png" alt="" id="cruiser">
-    <img src="./assets/submarine.png" alt="" id="submarine">
-    <img src="./assets/carrier.png" alt="" id="carrier">
-    <img src="./assets/destroyer.png" alt="" id="destroyer">
-    <!-- <div id="battleship"></div> -->
-    <!-- <div id="cruiser"></div>
-    <div id="submarine"></div>
-    <div id="carrier"></div>
-    <div id="destroyer"></div> -->
+    <img src="./assets/battleship.png" alt="" id="battleship" class="ship" draggable="true">
+    <img src="./assets/cruiser.png" alt="" id="cruiser" class="ship" draggable="true">
+    <img src="./assets/submarine.png" alt="" id="submarine" class="ship" draggable="true">
+    <img src="./assets/carrier.png" alt="" id="carrier" class="ship" draggable="true">
+    <img src="./assets/destroyer.png" alt="" id="destroyer" class="ship" draggable="true">
 </div>
 <div class="ship-placement">
     <input type="text" id="name-input" placeholder="Enter Player Name">
     <div class="placement-grid">
-        gird
     </div>
     <button class="rotate-ship">
         Rotate
+    </button>
+    <button class="reset-ships">
+        Reset Ships
     </button>
     <button class="start-game">
         Start
