add gameboard disable toggle between turns

--- a/src/play-game.html
+++ b/src/play-game.html
@@ -1,5 +1,12 @@
 <div id="player-name">player</div>
-<div id="player-gameboard"></div>
+<div id="player-gameboard">
+    <div class="not-allowed">
+    </div>
+</div>
 <div id="turn-indicator"></div>
 <div id="computer-name">computer</div>
-<div id="computer-gameboard"></div>
+<div id="computer-gameboard">
+    <div class="not-allowed hidden">
+
+    </div>
+</div>
